syntax = "proto3";

option go_package = "rpc/pb";

package favorite;

import "video.proto";

//  赞操作
//  登录用户对视频的点赞和取消点赞操作
//  POST

message FavoriteActionRequest {
  int64 user_id = 1;      // 用户id
  string token = 2;       // 用户鉴权token
  int64 video_id = 3;     // 视频id
  int32 action_type = 4;  // 1-点赞，2-取消点赞
}
message FavoriteActionResponse {
  int32 status_code = 1;  // 状态码，0-成功，其他值-失败
  string status_msg = 2;  // 返回状态描述
}

//  喜欢列表
//  登录用户的所有点赞视频
//  GET

message FavoriteListRequest {
  int64 user_id = 1;  // 用户id
  string token = 2;   // 用户鉴权token
}
message FavoriteListResponse {
  int32 status_code = 1;                // 状态码，0-成功，其他值-失败
  string status_msg = 2;                // 返回状态描述
  repeated video.Video video_list = 3;  // 用户点赞视频列表
}

//  rpc impl

service FavoriteService {
  rpc FavoriteAction (FavoriteActionRequest) returns (FavoriteActionResponse) {}
  rpc FavoriteList (FavoriteListRequest) returns (FavoriteListResponse) {}
}
